examples/errors/align-correct.tex
\documentclass{article}
\usepackage{amsmath,amssymb}
\begin{document}
\begin{align*}
  A &= \{z\in\mathbb{Z}:z<0\}\\
  &= \mathbb{Z}\setminus\mathbb{N}
\end{align*}
\end{document}
